--- a/content/unsupported-browser.html
+++ b/content/unsupported-browser.html
@@ -21,27 +21,27 @@ robots_tag: noindex
     <tbody>
       <tr>
         <td><span class="iconify" data-icon="simple-icons:googlechrome"></span> Chrome 80+</td>
-        <td><a href="https://google.com/chrome/" target="_blank">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
-        <td><a href="https://support.google.com/chrome/answer/95414" target="_blank">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
+        <td><a href="https://google.com/chrome/" target="_blank" title="Download">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
+        <td><a href="https://support.google.com/chrome/answer/95414" target="_blank" title="How to update">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
       </tr>
       <tr>
         <td><span class="iconify" data-icon="simple-icons:microsoftedge"></span> Microsoft Edge 80+</td>
-        <td><a href="https://microsoft.com/edge/" target="_blank">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
-        <td><a href="https://support.microsoft.com/topic/microsoft-edge-update-settings-af8aaca2-1b69-4870-94fe-18822dbb7ef1" target="_blank">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
+        <td><a href="https://microsoft.com/edge/" target="_blank" title="Download">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
+        <td><a href="https://support.microsoft.com/topic/microsoft-edge-update-settings-af8aaca2-1b69-4870-94fe-18822dbb7ef1" target="_blank" title="How to update">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
       </tr>
       <tr>
         <td><span class="iconify" data-icon="simple-icons:opera"></span> Opera 67+</td>
-        <td><a href="https://opera.com/download/" target="_blank">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
-        <td><a href="https://help.opera.com/latest/crashes-and-issues/#updateBrowser" target="_blank">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
+        <td><a href="https://opera.com/download/" target="_blank" title="Download">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
+        <td><a href="https://help.opera.com/latest/crashes-and-issues/#updateBrowser" target="_blank" title="How to update">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
       </tr>
       <tr>
         <td><span class="iconify" data-icon="simple-icons:brave"></span> Brave 1.3+</td>
-        <td><a href="https://brave.com/download/" target="_blank">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
+        <td><a href="https://brave.com/download/" target="_blank" title="Download">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
       </tr>
       <tr>
         <td><span class="iconify" data-icon="simple-icons:vivaldi"></span> Vivaldi 2.11+</td>
-        <td><a href="https://vivaldi.com/download/" target="_blank">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
-        <td><a href="https://help.vivaldi.com/desktop/install-update/update-vivaldi/" target="_blank">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
+        <td><a href="https://vivaldi.com/download/" target="_blank" title="Download">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
+        <td><a href="https://help.vivaldi.com/desktop/install-update/update-vivaldi/" target="_blank" title="How to update">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
       </tr>
     </tbody>
   </table>
@@ -59,8 +59,8 @@ robots_tag: noindex
     <tbody>
       <tr>
         <td><span class="iconify" data-icon="simple-icons:firefoxbrowser"></span> Firefox 74+</td>
-        <td><a href="https://mozilla.org/firefox/" target="_blank">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
-        <td><a href="https://support.mozilla.org/kb/update-firefox-latest-release" target="_blank" style="margin-left: 6px;">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
+        <td><a href="https://mozilla.org/firefox/" target="_blank" title="Download">{{< T "UnsupportedBrowserPage.Download" >}}</a></td>
+        <td><a href="https://support.mozilla.org/kb/update-firefox-latest-release" target="_blank" style="margin-left: 6px;" title="How To Update">{{< T "UnsupportedBrowserPage.HowToUpdate" >}}</a></td>
       </tr>
     </tbody>
   </table>
