--- a/content/addons.html
+++ b/content/addons.html
@@ -10,7 +10,7 @@ description: This page lists all of the addons that are implemented on Scratch A
 <div class="container">
 
 	<p>This page lists all of the addons that are implemented on Scratch Addons.</p>
-	<p class="font-italic">This page is incomplete, and we need your help to complete the images. Read more <a href="https://github.com/ScratchAddons/website-v2/issues/4">here</a>.</p>
+	<p class="font-italic">This page is incomplete, and we need your help to complete the images. Read more <a href="https://github.com/ScratchAddons/website-v2/issues/4" title="Addon page issues">here</a>.</p>
 
 	{{< specifics/addons >}}
 	
