--- a/content/farewell.html
+++ b/content/farewell.html
@@ -9,12 +9,12 @@ description: Scratch Addons has been uninstalled. We thank you for using the ext
 </section>
 
 <section class="container">
-    <p>You may reinstall the extension by clicking the install button above. You can also leave a review on <a href="https://chrome.google.com/webstore/detail/fbeffbjdlemaoicjdapfpikkikjoneco">the Chrome extension page</a> or <a href="https://addons.mozilla.org/firefox/addon/scratch-messaging-extension/">the Firefox addon page</a>.</p>
+    <p>You may reinstall the extension by clicking the install button above. You can also leave a review on <a href="https://chrome.google.com/webstore/detail/fbeffbjdlemaoicjdapfpikkikjoneco" title="Chrome extension page">the Chrome extension page</a> or <a href="https://addons.mozilla.org/firefox/addon/scratch-messaging-extension/" title="Firefox addon page">the Firefox addon page</a>.</p>
     <p>Based of your reasons of uninstalling the extension, here are some other things that you can do.</p>
     <ul>
-        <li>Having problems? Please tell us <a href='{{< ref "/feedback" >}}'>here</a> or create an issue <a href="https://github.com/ScratchAddons/ScratchAddons/issues">here</a>.</li>
-        <li>A feature is missing? Tell us <a href='{{< ref "/feedback" >}}'>here</a> or suggest by <a href="https://github.com/ScratchAddons/ScratchAddons/issues">creating an issue</a> or post about it on <a href="https://github.com/ScratchAddons/ScratchAddons/discussions">our Discussions tab</a>.</li>
-        <li>Disappointed, or have something to say? Tell us <a href='{{< ref "/feedback" >}}'>here</a>.</li>
+        <li>Having problems? Please tell us <a href='{{< ref "/feedback" >}}' title="Feedback">here</a> or create an issue <a href="https://github.com/ScratchAddons/ScratchAddons/issues" title="Issues">here</a>.</li>
+        <li>A feature is missing? Tell us <a href='{{< ref "/feedback" >}}' title="Feedback">here</a> or suggest by <a href="https://github.com/ScratchAddons/ScratchAddons/issues" title="Creating an issue">creating an issue</a> or post about it on <a href="https://github.com/ScratchAddons/ScratchAddons/discussions" title="Discussions">our Discussions tab</a>.</li>
+        <li>Disappointed, or have something to say? Tell us <a href='{{< ref "/feedback" >}}' title="Feedback">here</a>.</li>
     </ul>
 </section>
 
