--- a/content/scratch-messaging-transition.html
+++ b/content/scratch-messaging-transition.html
@@ -12,10 +12,10 @@ description: Scratch Messaging Extension (by griffpatch) has been updated and is
 </section>
 
 <section id="info" class="container mb-4 text-center">
-	<h2>What happened?</h2>
+	<h2>What Happened?</h2>
 	<p>Scratch Messaging Extension (by griffpatch) has been updated and is now called Scratch Addons.</p>
 	<p class="font-weight-bold">Click the Scratch Addons icon in the extension bar to check out the new redesigned messages summary!</p>
-	<p>Scratch Addons also includes many other Scratch related features. To enable them, go to <a href="https://scratch.mit.edu/scratch-addons-extension/settings" target="_blank">Scratch Addons settings</a>.
+	<p>Scratch Addons also includes many other Scratch related features. To enable them, go to <a href="https://scratch.mit.edu/scratch-addons-extension/settings" target="_blank" title="Scratch Addons settings">Scratch Addons settings</a>.
 	<p>For example, you can turn on <b class="font-weight-bold">Scratch Notifier</b> to get browser notifications when you get new Scratch messages.</p>
 	<p>Themes and features for the Scratch project editor are also available, like <b class="font-weight-bold">Editor dark mode</b> and <b class="font-weight-bold">Project progress bar</b>.</p>
 </section>
@@ -24,15 +24,15 @@ description: Scratch Messaging Extension (by griffpatch) has been updated and is
 	<div class="row">
 		<div class="col-12 col-xl-6 mb-4 mb-xl-0">
 			<section id="about">
-				<h2>What is Scratch Addons?</h2>
+				<h2>What Is Scratch Addons?</h2>
 				<p>Scratch Addons is an "all-in-one" browser extension for Scratch. It provides features and themes, both for the Scratch website and the project editor.</p>
-				<p>Scratch Addons is completely free and open source. You can read the source code and contribute on <a href="https://github.com/ScratchAddons/ScratchAddons" target="_blank">GitHub</a>.</p>
+				<p>Scratch Addons is completely free and open source. You can read the source code and contribute on <a href="https://github.com/ScratchAddons/ScratchAddons" target="_blank" title="GitHub">GitHub</a>.</p>
 				<p>Expect weekly or monthly updates, including bug fixes, enhanced features, and new features and themes!</p>
 			</section>	
 		</div>
 		<div class="col-12 col-xl-6 mb-4 mb-xl-0">
 			<section id="todo">
-				<h2>Is there anything that I need to do?</h2>
+				<h2>Is There Anything That I Need To Do?</h2>
 				<p><b class="font-weight-bold">Nope</b>.</p>
 				<p>Scratch Messaging Extension was already updated to Scratch Addons on your device. You can keep using Scratch Messaging normally by clicking the Scratch Addons icon in the extension bar.</p>
 				<p>If you'd like to enable more Scratch Addons features, go to its settings page by clicking its icon in the extension bar, then click the options icon.</p>
@@ -44,13 +44,13 @@ description: Scratch Messaging Extension (by griffpatch) has been updated and is
 <section id="feedback" class="container mb-4 text-center">
 	<h2>Send feedback</h2>
 	<p>If you have anything to say, please <a href='{{< ref "/feedback" >}}' target="_blank">go here to send feedback</a>.</p>
-	<p>You can also <a href="https://github.com/ScratchAddons/ScratchAddons/issues/new/choose" target="_blank">open a new issue on GitHub</a>.</p>
+	<p>You can also <a href="https://github.com/ScratchAddons/ScratchAddons/issues/new/choose" target="_blank" title="Open a new issue on GitHub">open a new issue on GitHub</a>.</p>
 </section>
 
 <style>
 	#intro-img img {
 		width: 150px;
-		height: 150px
+		height: 150px;
 	}
 
 	#intro-img .iconify {
