--- a/content/welcome.html
+++ b/content/welcome.html
@@ -38,7 +38,7 @@ description: Scratch Addons has been installed successfully! Thank you for insta
 			</div>
 			<img class="card-img-top" src="/assets/img/getting-started/step-3.png" alt="Scroll through the addons list and enable the ones that you want">
 			<div class="card-body">
-				<h5 class="card-title">Scroll through the addons list and enable the ones that you want</h5>
+				<h5 class="card-title">Scroll thought the addons list and enable the ones that you want</h5>
 				<p class="card-text">You can also configure each of the addons on the bottom section of each addons.</p>
 			</div>
 		</div>
@@ -46,11 +46,11 @@ description: Scratch Addons has been installed successfully! Thank you for insta
 </section>
 
 <section id="support" class="container mb-4">
-	<h2 class="h4">Want to support us?</h2>
-	<p>You can star our repository on GitHub <a href="https://github.com/ScratchAddons/ScratchAddons">here</a> or leave a review on <a href="https://chrome.google.com/webstore/detail/fbeffbjdlemaoicjdapfpikkikjoneco">the Chrome extension page</a> or <a href="https://addons.mozilla.org/firefox/addon/scratch-messaging-extension/">the Firefox addon page</a>.</p>
+	<h2 class="h4">Want To Support Us?</h2>
+	<p>You can star our repository on GitHub <a href="https://github.com/ScratchAddons/ScratchAddons" title="ScratchAddons repository">here</a> or leave a review on <a href="https://chrome.google.com/webstore/detail/fbeffbjdlemaoicjdapfpikkikjoneco" title="Chrome extension page">the Chrome extension page</a> or <a href="https://addons.mozilla.org/firefox/addon/scratch-messaging-extension/" title="Firefox addon page">the Firefox addon page</a>.</p>
 </section>
 
 <section id="transition" class="container">
-	<h2 class="h4">Coming from Scratch Messaging Extension?</h2>
-	<p>Scratch Messaging Extension (by griffpatch) has been updated and is now called Scratch Addons. <a href='{{< ref "/scratch-messaging-transition" >}}'>Read more</a>.</p>
+	<h2 class="h4">Coming From Scratch Messaging Extension?</h2>
+	<p>Scratch Messaging Extension (by griffpatch) has been updated and is now called Scratch Addons. <a href='{{< ref "/scratch-messaging-transition" >}}' title="Read more">Read more</a>.</p>
 </section>
