--- a/content/contributors.html
+++ b/content/contributors.html
@@ -8,9 +8,9 @@ description: Many thanks to these amazing people for contributing to the project
 <h1>Contributors</h1>
 
 <div class="container">
-	<p>Many thanks to these amazing people for contributing to the project by working on Scratch Addons, its features, its themes, its website, etc. (<a href="https://allcontributors.org/docs/en/emoji-key">emoji key</a>)</p>
+	<p>Many thanks to these amazing people for contributing to the project by working on Scratch Addons, its features, its themes, its website, etc. (<a href="https://allcontributors.org/docs/en/emoji-key" title="Emoji key">emoji key</a>)</p>
 
-	<p>This project follows the <a href="https://github.com/all-contributors/all-contributors">all-contributors</a> specification. Commits are also added outside the specification. Many thanks to <a href="https://twemoji.twitter.com/">Twemoji</a> for providing the emojis.</p>
+	<p>This project follows the <a href="https://github.com/all-contributors/all-contributors" title="All contributors">all-contributors</a> specification. Commits are also added outside the specification. Many thanks to <a href="https://twemoji.twitter.com/" title="Twemoji">Twemoji</a> for providing the emojis.</p>
 
 	<p>Contributions of any kind welcome!</p>
 
@@ -20,8 +20,8 @@ description: Many thanks to these amazing people for contributing to the project
 		<div class="row"></div>
 	</div>
 
-	<p class="font-italic">Have contributed in any way? Read how to put your name <a href="https://github.com/ScratchAddons/contributors/issues/{{< specifics/contributors-issue >}}">here</a>.</p>
+	<p class="font-italic">Have contributed in any way? Read how to put your name <a href="https://github.com/ScratchAddons/contributors/issues/{{< specifics/contributors-issue >}}" title="Scratch Addons issues">here</a>.</p>
 
-	<p class="font-italic">View the contributors repository <a href="https://github.com/ScratchAddons/contributors/">here</a>.</p>
+	<p class="font-italic">View the contributors repository <a href="https://github.com/ScratchAddons/contributors/" title="Scratch Addons contributors">here</a>.</p>
 
 </div>
