--- a/content/feedback.html
+++ b/content/feedback.html
@@ -17,19 +17,19 @@ description: Send feedback to Scratch Addons developers.
 			<h2>Alternatives</h2>
 			<p>In case you need an alternative, here are some choices.</p>
 			<ul>
-				<li>Create a issue on <a href="https://github.com/ScratchAddons/ScratchAddons/issues" rel="noopener">the repository</a>.</li>
-				<li>Create a post on <a href="https://github.com/ScratchAddons/ScratchAddons/discussions" rel="noopener">our Discussions tab</a></li>
-				<li>Send a message on <a href="https://discord.gg/R5NBqwMjNc" rel="noopener">our Discord server</a></li>
+				<li>Create a issue on <a href="https://github.com/ScratchAddons/ScratchAddons/issues" rel="noopener" title="Scratch Addons repository">the repository</a>.</li>
+				<li>Create a post on <a href="https://github.com/ScratchAddons/ScratchAddons/discussions" rel="noopener" title="Discussions tab">our Discussions tab</a></li>
+				<li>Send a message on <a href="https://discord.gg/R5NBqwMjNc" rel="noopener" title="Discord server">our Discord server</a></li>
 				<li>Contact one of the contributors on Discord, Twitter, or other methods</li>
 			</ul>
-			<p>It is discouraged to contact one of the contributors through Scratch due to <a href="https://scratch.mit.edu/discuss/post/2907564/" rel="noopener">the policy that forbids advertising extensions/userscripts</a>.</p>
-			<p>By the way, we have <a href="/docs/faq">a FAQ page</a> for your usual questions.</p>
+			<p>It is discouraged to contact one of the contributors through Scratch due to <a href="https://scratch.mit.edu/discuss/post/2907564/" rel="noopener" title="The policy that forbids advertising extensions/userscripts">the policy that forbids advertising extensions/userscripts</a>.</p>
+			<p>By the way, we have <a href="/docs/faq" title="FAQ page">a FAQ page</a> for your usual questions.</p>
 		</div>
 	</div>
 </div>
 
 <style>
 	#feedback-content {
-		height: 200px
+		height: 200px;
 	}
 </style>
